iptables
# 4222 				- SSH
# 161,1248	 		- SNMP, Nagios
# 443				- Httpd
# 660:670			- Arbitrary File Transfer
# 694				- Heartbeat
# 3306:3350 			- MySQL
# 3030				- Sensu
# 5430:5440			- POSTGRESQL
# 7788:7799			- DRBD
# 9999,9898			- PGPOOL
# 10050				- Zabbix
# 27010:27020 			- MongoDB

## GD subnets in case needed for testing
# All GD Networks - 10.0.0.0/8,23.229.128.0/17,37.148.200.0/21,43.255.152.0/22,45.40.128.0/18,46.252.192.0/20,50.62.0.0/15,63.241.136.0/24,64.202.160.0/19,68.178.128.0/17,70.166.200.48/28,72.167.0.0/16,97.74.0.0/16,103.1.172.0/22,104.238.64.0/18,107.180.0.0/17,118.139.160.0/19,132.148.0.0/16,146.255.32.0/20,148.66.128.0/19,148.72.0.0/16,160.153.0.0/16,166.62.0.0/17,172.16.0.0/12,173.201.0.0/16,181.121.37.8/30,182.50.128.0/19,184.168.0.0/16,185.7.248.0/22,188.121.32.0/19,192.168.0.0/17,192.168.12 [...]
# All Shared Hosting - 10.6.166.0/24,10.6.175.0/24,10.6.185.0/24,10.6.186.0/24,37.148.204.0/24,50.62.209.0/24,50.63.104.0/22,50.63.108.0/22,50.63.192.0/18,50.63.244.0/24,68.178.128.0/20,68.178.140.0/22,68.178.216.0/20,72.167.154.0/24,72.167.233.0/25,97.74.30.0/24,97.74.31.0/24,97.74.149.0/24,97.74.218.0/24,118.139.168.0/24,118.139.179.0/24,173.201.88.0/24,173.201.136.0/24,173.201.214.0/24,173.201.217.0/24,182.50.131.0/24,182.50.133.0/24,184.168.44.0/24,184.168.45.0/24,184.168.154.0/24,184.168.15 [...]

*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
# Do not establish conntracks for some high volume apps. Like mysql
-A PREROUTING -i lo -j NOTRACK
-A PREROUTING -p tcp --dport 443 -j NOTRACK
-A PREROUTING -p tcp -m multiport --dport 3306:3350 -j NOTRACK

-A OUTPUT -o lo -j NOTRACK
-A OUTPUT -p tcp --sport 443 -j NOTRACK
-A OUTPUT -p tcp -m multiport --sport 3306:3350 -j NOTRACK
COMMIT

# === FILTER TABLE ==============================================================
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
#This prevents us from writing outbound rules

# === INBOUND RULES =============================================================
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type echo-request -j ACCEPT

# SSH access
# Cox IP range
-A INPUT -p tcp -m tcp --dport 4222 -s 98.165.0.0/16 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 4222 -s 98.167.128.0/17 -j ACCEPT
# GD VPN range
-A INPUT -p tcp -m tcp --dport 4222 -s 216.69.128.0/18 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 4222 -s 64.202.160.0/19 -j ACCEPT
# Qwest IP range
-A INPUT -p tcp -m tcp --dport 4222 -s 174.16.0.0/12 -j ACCEPT

# Allow anywhere to hit 80 and 443
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT

# Pi-Hole
# Allow me to hit the Pi-Hole
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p udp --sport 53 --dport 1024:65535 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -p tcp --sport 53 --dport 1024:65535 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -p udp --sport 1024:65535 --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp --sport 1024:65535 --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT

-A INPUT -j REJECT
COMMIT
